--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,7 +12,7 @@
         android:layout_height="match_parent">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/tab_home"
+            android:id="@+id/tabHome"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:background="@color/colorPrimary"
@@ -39,17 +39,17 @@
         </com.google.android.material.appbar.MaterialToolbar>
 
         <androidx.viewpager.widget.ViewPager
-            android:id="@+id/vp_slider"
+            android:id="@+id/vpSlider"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_260dp"
             android:contentDescription="view pager for banner"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tab_home"
+            app:layout_constraintTop_toBottomOf="@+id/tabHome"
             app:layout_constraintVertical_bias="0.0" />
 
         <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
-            android:id="@+id/dots_indicator"
+            android:id="@+id/dotsIndicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:dotsColor="@color/white"
@@ -57,24 +57,24 @@
             app:dotsSize="16dp"
             app:dotsSpacing="4dp"
             app:dotsWidthFactor="2.5"
-            app:layout_constraintBottom_toBottomOf="@+id/vp_slider"
+            app:layout_constraintBottom_toBottomOf="@+id/vpSlider"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/vp_slider"
+            app:layout_constraintStart_toStartOf="@id/vpSlider"
             app:progressMode="true"
             app:selectedDotColor="@color/yellow_100" />
 
         <com.annisaarss.movieapp.presentation.reusable.HorizontalMovies
-            android:id="@+id/layout_popupar_movie"
+            android:id="@+id/layoutPopular"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_192dp"
-            app:layout_constraintTop_toBottomOf="@id/vp_slider"
+            app:layout_constraintTop_toBottomOf="@id/vpSlider"
             app:layout_constraintStart_toStartOf="parent"/>
 
         <com.annisaarss.movieapp.presentation.reusable.HorizontalMovies
-            android:id="@+id/layout_coming_soon_movie"
+            android:id="@+id/layoutCoomingSoon"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_192dp"
-            app:layout_constraintTop_toBottomOf="@id/layout_popupar_movie"
+            app:layout_constraintTop_toBottomOf="@id/layoutPopular"
             app:layout_constraintStart_toStartOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
