--- a/app/src/main/res/layout/fragment_popular.xml
+++ b/app/src/main/res/layout/fragment_popular.xml
@@ -11,9 +11,9 @@
         android:layout_height="match_parent">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/tb_home"
+            android:id="@+id/tbHome"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
+            android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -23,36 +23,31 @@
             app:tabSelectedTextColor="@android:color/white"
             app:tabTextColor="#ccc">
 
-            <com.google.android.material.textfield.TextInputLayout
+            <EditText
+                android:id="@+id/etSearch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:textColor="@android:color/white"
-                android:textColorHint="@color/white_40">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/Widget.AppCompat.EditText"
-                    android:layout_marginEnd="@dimen/dimen_15dp"
-                    android:drawableEnd="@drawable/ic_search_yellow"
-                    android:hint="Search Movie"
-                    android:imeOptions="actionNext"
-                    android:inputType="textEmailAddress|textNoSuggestions"
-                    android:minWidth="350dp"
-                    android:textColor="@android:color/white"
-                    android:textColorHint="@color/white"
-                    app:backgroundTint="@color/black_100" />
-            </com.google.android.material.textfield.TextInputLayout>
+                android:layout_marginVertical="@dimen/dimen_10dp"
+                android:layout_marginHorizontal="@dimen/dimen_20dp"
+                android:backgroundTint="@color/white_12"
+                android:drawableEnd="@drawable/ic_search_yellow"
+                android:hint="Search Movie"
+                android:textColor="@color/white_70"
+                android:inputType="text"
+                android:textColorHint="@color/white_70"
+                tools:ignore="TouchTargetSizeCheck"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="5dp" />
         </com.google.android.material.appbar.MaterialToolbar>
 
         <LinearLayout
-            android:id="@+id/container_title_popular"
+            android:id="@+id/containerTitlePopular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@+id/tb_home"
+            android:visibility="gone"
+            android:layout_marginTop="@dimen/dimen_10dp"
+            app:layout_constraintTop_toBottomOf="@+id/tbHome"
             app:layout_constraintStart_toStartOf="parent">
             <com.google.android.material.textview.MaterialTextView
                 style="@style/HeadingLightTextStyle"
@@ -67,13 +62,14 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvPopular"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/container_title_popular" />
+            app:layout_constraintTop_toBottomOf="@id/containerTitlePopular" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
