--- a/app/src/main/res/layout/item_image_slider.xml
+++ b/app/src/main/res/layout/item_image_slider.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/img_banner"
+        android:id="@+id/imgBanner"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_260dp"
         android:scaleType="fitXY"
