--- a/app/src/main/res/layout/item_popular.xml
+++ b/app/src/main/res/layout/item_popular.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/dimen_8dp"
-    android:layout_marginEnd="@dimen/dimen_8dp"
     android:background="@color/black_100"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/img_cover"
+        android:id="@+id/imgCover"
         android:layout_width="@dimen/dimen_160dp"
         android:layout_height="@dimen/dimen_215dp"
         android:scaleType="fitXY"
@@ -18,21 +16,22 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tv_title_movie"
+        android:id="@+id/tvTitleMovie"
         style="@style/Title3TextStyle"
         android:maxWidth="@dimen/dimen_215dp"
         android:maxLines="1"
         android:layout_marginTop="@dimen/dimen_5dp"
         android:text="Maze Runner - Death Cure"
-        app:layout_constraintTop_toBottomOf="@id/img_cover"
-        app:layout_constraintStart_toStartOf="@id/img_cover"/>
+        app:layout_constraintTop_toBottomOf="@id/imgCover"
+        app:layout_constraintStart_toStartOf="@id/imgCover"/>
 
     <com.google.android.material.textview.MaterialTextView
         style="@style/ListCastTextStyle"
+        android:id="@+id/tvDescriptionMovie"
         android:maxWidth="@dimen/dimen_160dp"
         android:maxLines="2"
         android:layout_marginTop="@dimen/dimen_5dp"
         android:text="Maze Runner - Death Cure Maze Runner - Death Cure"
-        app:layout_constraintTop_toBottomOf="@id/tv_title_movie"
-        app:layout_constraintStart_toStartOf="@id/tv_title_movie"/>
+        app:layout_constraintTop_toBottomOf="@id/tvTitleMovie"
+        app:layout_constraintStart_toStartOf="@id/tvTitleMovie"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
