--- a/app/src/main/res/layout/layout_horizontal_movie.xml
+++ b/app/src/main/res/layout/layout_horizontal_movie.xml
@@ -17,7 +17,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_horizontal_movie"
-        android:layout_width="match_parent"
+        android:scrollbars="horizontal"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"/>
 
