--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     <color name="black_200">#25272A</color>
     <color name="yellow_100">#FFD130</color>
     <color name="yellow_200">#66FFD130</color>
+    <color name="white_87">#DEFFFFFF</color>
+    <color name="transparant">#00FFFFFF</color>
 </resources>
