--- a/app/src/main/res/values/text_style.xml
+++ b/app/src/main/res/values/text_style.xml
@@ -28,7 +28,7 @@
     <style name="Title1TextStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">@fonts/sfprodisplay</item>
+        <item name="android:fontFamily">@fonts/sfprotext</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/text_size_28sp</item>
     </style>
