--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -26,6 +26,7 @@
                 android:layout_height="@dimen/dimen_563dp"
                 app:layout_collapseMode="parallax">
                 <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/imgMovie"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dimen_563dp"
                     android:scaleType="centerCrop"
@@ -73,13 +74,13 @@
                         app:layout_constraintTop_toTopOf="@id/tvDurationMovie"
                         app:layout_constraintStart_toEndOf="@id/tvDurationMovie"/>
 
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tvGenreMovie"
-                        style="@style/Detail1TextStyle"
-                        android:text="@string/sample_genre"
-                        android:maxWidth="@dimen/dimen_375dp"
-                        android:layout_marginStart="@dimen/dimen_20dp"
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rvGenreMovie"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/dimen_10dp"
+                        android:layout_marginStart="@dimen/dimen_20dp"
+                        android:layout_marginHorizontal="@dimen/dimen_6dp"
                         app:layout_constraintTop_toBottomOf="@id/tvDurationMovie"
                         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -93,7 +94,8 @@
                         android:layout_marginEnd="@dimen/dimen_20dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/tvGenreMovie">
+                        app:layout_constraintTop_toBottomOf="@id/rvGenreMovie">
+
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/btnPlay"
                             android:layout_width="0dp"
@@ -182,7 +184,7 @@
                 android:layout_marginTop="@dimen/dimen_20dp"/>
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvCast"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dimen_15dp"/>
         </LinearLayout>
