--- a/app/src/main/res/layout/item_cast.xml
+++ b/app/src/main/res/layout/item_cast.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="@dimen/dimen_90dp"
     android:layout_height="wrap_content"
+    android:layout_marginEnd="@dimen/dimen_10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/img_cast"
+        android:id="@+id/imgCast"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_90dp"
         android:src="@drawable/sample_photo"
@@ -13,12 +14,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_name_cast"
+        android:id="@+id/tvNameCast"
         android:layout_width="match_parent"
         android:maxLines="2"
         android:layout_marginTop="@dimen/dimen_15dp"
         style="@style/Detail1TextStyle"
-        app:layout_constraintStart_toStartOf="@id/img_cast"
-        app:layout_constraintEnd_toEndOf="@id/img_cast"
-        app:layout_constraintTop_toBottomOf="@id/img_cast"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imgCast"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
