--- a/app/src/main/res/layout/item_popular.xml
+++ b/app/src/main/res/layout/item_popular.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/dimen_10dp"
     android:background="@color/black_100"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -12,6 +13,7 @@
         android:layout_height="@dimen/dimen_215dp"
         android:scaleType="fitXY"
         android:src="@drawable/sample_photo"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,13 +23,13 @@
         android:maxWidth="@dimen/dimen_215dp"
         android:maxLines="1"
         android:layout_marginTop="@dimen/dimen_5dp"
-        android:text="Maze Runner - Death Cure"
+        android:text="@string/sample_title"
         app:layout_constraintTop_toBottomOf="@id/imgCover"
         app:layout_constraintStart_toStartOf="@id/imgCover"/>
 
     <com.google.android.material.textview.MaterialTextView
-        style="@style/ListCastTextStyle"
         android:id="@+id/tvDescriptionMovie"
+        style="@style/ListCastTextStyle"
         android:maxWidth="@dimen/dimen_160dp"
         android:maxLines="2"
         android:layout_marginTop="@dimen/dimen_5dp"
