--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,6 +24,7 @@
     <dimen name="dimen_8dp">8dp</dimen>
     <dimen name="dimen_30dp">30dp</dimen>
     <dimen name="dimen_80dp">80dp</dimen>
+    <dimen name="dimen_70dp">70dp</dimen>
     <dimen name="dimen_154dp">154dp</dimen>
     <dimen name="dimen_450dp">450dp</dimen>
     <dimen name="dimen_563dp">563dp</dimen>
