--- a/app/src/main/res/layout/item_genre.xml
+++ b/app/src/main/res/layout/item_genre.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/dimen_20dp"
     android:layout_marginEnd="@dimen/dimen_6dp"
     android:maxWidth="@dimen/dimen_375dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -9,7 +9,7 @@
         android:id="@+id/tvGenreMovie"
         style="@style/Detail1TextStyle"
         android:text="@string/sample_genre"
-        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imgOval"
