--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,6 +18,7 @@
     <dimen name="dimen_28dp">28dp</dimen>
     <dimen name="dimen_400dp">400dp</dimen>
     <dimen name="dimen_169dp">169dp</dimen>
+    <dimen name="dimen_180dp">180dp</dimen>
     <dimen name="dimen_327dp">327dp</dimen>
     <dimen name="dimen_50dp">50dp</dimen>
     <dimen name="dimen_40dp">40dp</dimen>
