--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -12,155 +12,146 @@
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:fitsSystemWindows="true">
+        android:fitsSystemWindows="true"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapseToolbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:contentScrim="@color/black_100"
             android:fitsSystemWindows="true"
+            app:contentScrim="@color/black_100"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_563dp"
                 app:layout_collapseMode="parallax">
+
                 <androidx.appcompat.widget.AppCompatImageView
                     android:id="@+id/imgMovie"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dimen_563dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/sample_photo"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dimen_174dp"
+                    android:background="@color/black_40"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:background="@color/black_40">
+                    app:layout_constraintStart_toStartOf="parent">
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/tvTitleMovie"
                         style="@style/Title1TextStyle"
-                        android:text="@string/sample_title"
-                        android:maxWidth="@dimen/dimen_375dp"
+                        android:singleLine="true"
                         android:layout_marginStart="@dimen/dimen_20dp"
                         android:layout_marginTop="@dimen/dimen_14dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"/>
+                        android:maxWidth="@dimen/dimen_375dp"
+                        android:text="@string/sample_title"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/tvDurationMovie"
                         style="@style/Detail1TextStyle"
-                        android:text="@string/sample_duration"
-                        android:maxWidth="@dimen/dimen_375dp"
                         android:layout_marginStart="@dimen/dimen_20dp"
                         android:layout_marginTop="@dimen/dimen_10dp"
-                        app:layout_constraintTop_toBottomOf="@id/tvTitleMovie"
-                        app:layout_constraintStart_toStartOf="parent"/>
+                        android:maxWidth="@dimen/dimen_375dp"
+                        android:text="@string/sample_duration"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/tvTitleMovie" />
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/tvHdMovie"
                         style="@style/Detail3TextStyle"
-                        android:text="@string/hd"
-                        android:gravity="center"
-                        android:background="@drawable/bg_hd"
-                        android:maxWidth="@dimen/dimen_375dp"
                         android:layout_marginStart="@dimen/dimen_10dp"
+                        android:background="@drawable/bg_hd"
+                        android:gravity="center"
+                        android:maxWidth="@dimen/dimen_375dp"
+                        android:text="@string/hd"
                         app:layout_constraintBottom_toBottomOf="@id/tvDurationMovie"
-                        app:layout_constraintTop_toTopOf="@id/tvDurationMovie"
-                        app:layout_constraintStart_toEndOf="@id/tvDurationMovie"/>
+                        app:layout_constraintStart_toEndOf="@id/tvDurationMovie"
+                        app:layout_constraintTop_toTopOf="@id/tvDurationMovie" />
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvGenreMovie"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="@dimen/dimen_20dp"
                         android:layout_marginTop="@dimen/dimen_10dp"
-                        android:layout_marginStart="@dimen/dimen_20dp"
-                        android:layout_marginHorizontal="@dimen/dimen_6dp"
-                        app:layout_constraintTop_toBottomOf="@id/tvDurationMovie"
-                        app:layout_constraintStart_toStartOf="parent"/>
+                        android:scrollbars="horizontal"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/tvDurationMovie" />
 
                     <LinearLayout
-                        android:layout_marginTop="@dimen/dimen_10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:weightSum="2"
-                        android:orientation="horizontal"
                         android:layout_marginStart="@dimen/dimen_20dp"
+                        android:layout_marginTop="@dimen/dimen_10dp"
                         android:layout_marginEnd="@dimen/dimen_20dp"
-                        app:layout_constraintStart_toStartOf="parent"
+                        android:orientation="horizontal"
+                        android:weightSum="2"
                         app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/rvGenreMovie">
 
                         <com.google.android.material.button.MaterialButton
                             android:id="@+id/btnPlay"
-                            android:layout_width="0dp"
+                            android:layout_width="@dimen/dimen_160dp"
                             android:layout_height="wrap_content"
+                            android:layout_marginEnd="@dimen/dimen_6dp"
                             android:layout_weight="1"
-                            android:textStyle="bold"
-                            android:textSize="@dimen/text_size_12sp"
-                            android:fontFamily="@font/sfprotext"
-                            app:cornerRadius="@dimen/dimen_6dp"
-                            android:textAllCaps="false"
                             android:backgroundTint="@color/yellow_100"
-                            app:icon="@drawable/ic_play_outline"
-                            app:iconTint="@color/black"
-                            app:iconGravity="start"
-                            app:iconPadding="@dimen/dimen_4dp"
-                            android:textColor="@color/black"
-                            android:text="@string/watch_trailer"
-                            android:layout_marginEnd="@dimen/dimen_6dp"/>
-                        <com.google.android.material.button.MaterialButton
-                            android:id="@+id/btnFavorite"
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_height="wrap_content"
-                            android:textStyle="bold"
-                            android:textSize="@dimen/text_size_12sp"
                             android:fontFamily="@font/sfprotext"
-                            app:cornerRadius="@dimen/dimen_6dp"
+                            android:text="@string/watch_trailer"
                             android:textAllCaps="false"
-                            app:strokeWidth="@dimen/dimen_1dp"
-                            app:strokeColor="@color/white_12"
-                            android:backgroundTint="@color/black"
-                            app:icon="@drawable/ic_add_yellow"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/text_size_14sp"
+                            app:cornerRadius="@dimen/dimen_6dp"
+                            app:icon="@drawable/ic_play_outline"
                             app:iconGravity="start"
                             app:iconPadding="@dimen/dimen_4dp"
-                            android:textColor="@color/white"
-                            android:text="@string/btn_favorite"
-                            android:layout_marginStart="@dimen/dimen_6dp"/>
+                            app:iconTint="@color/black" />
+
+                        <ToggleButton
+                            android:id="@+id/btnFavorite"
+                            android:layout_width="@dimen/dimen_160dp"
+                            android:layout_height="@dimen/dimen_36dp"
+                            android:layout_weight="1"
+                            app:cornerRadius="@dimen/dimen_6dp"
+                            android:textOff=""
+                            android:textOn=""
+                            android:background="@drawable/selector_btn_favorite"
+                            android:focusable="false"
+                            android:focusableInTouchMode="false"
+                            />
                     </LinearLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <!-- The attribute app:layout_collapseMode="pin" is set so that
-                 sticks to the top when the user scrolls the view up-->
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:layout_collapseMode="pin"
                 app:layout_scrollFlags="scroll|enterAlways"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Dark">
+
                 <ImageButton
                     android:id="@+id/btnBack"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_back"
                     android:background="@null"
-                    android:contentDescription="this is button back"
-                    />
-
+                    android:src="@drawable/ic_back" />
             </androidx.appcompat.widget.Toolbar>
-
         </com.google.android.material.appbar.CollapsingToolbarLayout>
-
     </com.google.android.material.appbar.AppBarLayout>
 
-    <!--Now add the NestedScollView-->
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -189,5 +180,4 @@
                 android:layout_marginTop="@dimen/dimen_15dp"/>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
