--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -7,7 +7,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/tbHome"
             android:layout_width="match_parent"
@@ -27,7 +27,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="@dimen/dimen_10dp"
                 android:layout_marginHorizontal="@dimen/dimen_20dp"
-                android:hint="Search Movie"
+                android:hint="@string/search_movie"
+                android:autofillHints="name"
                 android:textColor="@color/white_70"
                 android:backgroundTint="@color/white_12"
                 android:textColorHint="@color/white_70"
@@ -41,5 +42,16 @@
             android:layout_height="match_parent"
             app:layout_constraintTop_toBottomOf="@+id/tbHome"
             tools:layout_editor_absoluteX="0dp" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tvNoData"
+            style="@style/Detail1TextStyle"
+            android:text="@string/message_no_data"
+            android:visibility="gone"
+            android:layout_marginTop="@dimen/dimen_160dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
