--- a/app/src/main/res/layout/item_cast.xml
+++ b/app/src/main/res/layout/item_cast.xml
@@ -3,8 +3,9 @@
     android:layout_width="@dimen/dimen_90dp"
     android:layout_height="wrap_content"
     android:layout_marginEnd="@dimen/dimen_10dp"
+    android:background="@color/black_100"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.appcompat.widget.AppCompatImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imgCast"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dimen_90dp"
@@ -17,6 +18,8 @@
         android:id="@+id/tvNameCast"
         android:layout_width="match_parent"
         android:maxLines="2"
+        android:text="@string/sample_cast"
+        android:gravity="center"
         android:layout_marginTop="@dimen/dimen_15dp"
         style="@style/Detail1TextStyle"
         app:layout_constraintStart_toStartOf="parent"
